kubernetes/hassan/03-microblog.yml
apiVersion: v1
kind: Service
metadata:
  name: microblog
  namespace: microblog
spec:
  type: ClusterIP
  selector:
    app: microblog
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microblog
  namespace: microblog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microblog
  template:
    metadata:
      labels:
        app: microblog
    spec:
      containers:
        - name: microblog
          image: hassanabdulmouti/microblog:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http
          startupProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
