kubernetes/hassan/04-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog
  namespace: microblog
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - haad23-microblog.northeurope.cloudapp.azure.com
      secretName: microblog-tls
  rules:
    - host: haad23-microblog.northeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  number: 5000
